--- a/build.yaml
+++ b/build.yaml
@@ -21,8 +21,8 @@
 include:
   - board: nice_nano_v2
     shield: cygnus_left
-    # snippet: studio-rpc-usb-uart
-    # cmake-args: -DCONFIG_ZMK_STUDIO=y
-    # artifact-name: cygnus_left_with_studio
   - board: nice_nano_v2
     shield: cygnus_right
+
+  - board: nice_nano_v2
+    shield: settings_reset
